<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HelloIntents</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sms">SMS</string>
    <string name="ligar">Ligar</string>
    <string name="abrir_site">Abrir Site</string>
    <string name="abrir_mapas">Abrir Mapas</string>
    <string name="abrir_contatos">Abrir Contatos</string>
    <string name="scan">Scan</string>

</resources>
