<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <Button
        android:id="@+id/btSms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sms"
        />

    <Button
        android:id="@+id/btLigar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ligar"
        />

    <Button
        android:id="@+id/btSite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/abrir_site"
    />

    <Button
        android:id="@+id/btMaps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/abrir_mapas"
        />

    <Button
        android:id="@+id/btContatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/abrir_contatos"
        />

    <Button
        android:id="@+id/btScan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan"
        />

</LinearLayout>